--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head prefix="dc: http://purl.org/dc/terms/">
+<head prefix="dc: http://purl.org/dc/terms/" prefix="og: http://ogp.me/ns#">
   <meta http-equiv="Content-Type" content="Type=text/html; charset=utf-8" />
   <meta name="author" content="DR3WH0">
   <meta name="keywords" content="Prose, Poetry, Photography, Music" />
@@ -8,16 +8,32 @@
   <script src="/javascripts/scale.fix.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
+
   <!-- RDFa Dublin Core Metadata -->
   <meta property="dc:creator" content="DR3WH0" />
   <meta property="dc:type" content="Blog" />
   <meta property="dc:format" content="text/html" />
   <meta property="dc:language" content="en" />
-  <meta property="dc:title" content="DR3WH0{% if page.title %} | {{ page.title }}{% endif %}" />
+  {% if page.title %}<meta property="dc:title" content="{{ page.title }}" />{% endif %}
+  {% if page.description %}<meta property="dc:description" content="{{ page.description }}" />{% endif %}
   {% if page.tags %}
     {% for tag in page.tags %}<meta property="dc:subject" content="{{ tag }}" />{% endfor %}
   {% endif %}
   {% if page.category == 'radio' %}
     <meta property="dc:subject" content="music" />
+  {% endif %}
+  {% if page.category == 'photo' %}
+    <meta property="dc:subject" content="photography" />
+  {% endif %}
+
+  <!-- Open Graph Metadata -->
+  <meta property="og:site_name" content="DR3WH0: Time Travel & Other Anomalies">
+  {% if page.title %}<meta property="og:title" content="{{ page.title }}">{% endif %}
+  {% if page.description %}<meta property="og:description" content="{{ page.description }}" />{% endif %}
+  {% if page.category == 'radio' %}
+    <meta property="og:description" content="A last.fm station played by DR3WH0." />
+  {% endif %}
+  {% if page.category == 'photo' %}
+    <meta property="og:description" content="A photograph by DR3WH0." />
   {% endif %}
 </head>
