--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,47 +7,52 @@
   <link rel="icon" type="image/png" href="https://dl.dropboxusercontent.com/u/8239797/DR3WH0_favicon.png"/>
   <script src="/javascripts/scale.fix.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  {% if page.description %}<meta name="description" content="{{ page.description }}" />{% endif %}
-  {% if page.category == 'radio' %}
+  {% if page.description %}
+    <meta name="description" content="{{ page.description }}" />
+  {% elsif page.category == 'radio' %}
     <meta name="description" content="Track list with album covers for a last.fm station played by DR3WH0." />
-  {% endif %}
-  {% if page.category == 'photo' %}
+  {% elsif page.category == 'photo' %}
     <meta name="description" content="A photograph by DR3WH0." />
+  {% else %}
+    <meta name="description" content="Time Travel & Other Anomalies." />
   {% endif %}
 
   <!-- RDFa Dublin Core Metadata -->
   <meta property="dc:creator" content="DR3WH0" />
-  <meta property="dc:type" content="Text" />
-  <meta property="dc:format" content="text/html" />
   <meta property="dc:language" content="en" />
   {% if page.title %}<meta property="dc:title" content="{{ page.title }}" />{% endif %}
-  {% if page.description %}<meta property="dc:description" content="{{ page.description }}" />{% endif %}
-  {% if page.tags %}
-    {% for tag in page.tags %}<meta property="dc:subject" content="{{ tag }}" />{% endfor %}
-  {% endif %}
   {% if page.category == 'radio' %}
     <meta property="dc:description" content="Track list with album covers for a last.fm station played by DR3WH0." />
+    <meta property="dc:type" content="Text" />
     <meta property="dc:type" content="Image" />
+    <meta property="dc:format" content="text/html" />
     <meta property="dc:format" content="image/jpeg" />
     <meta property="dc:format" content="image/png" />
     <meta property="dc:subject" content="music" />
     <meta property="dc:subject" content="album artwork" />
-  {% endif %}
-  {% if page.category == 'photo' %}
+  {% elsif page.category == 'photo' %}
     <meta property="dc:description" content="A photograph by DR3WH0." />
     <meta property="dc:type" content="Image" />
     <meta property="dc:format" content="image/jpeg" />
     <meta property="dc:subject" content="photography" />
+  {% else %}
+    {% if page.description %}<meta property="dc:description" content="{{ page.description }}" />{% endif %}
+    <meta property="dc:type" content="Text" />
+    <meta property="dc:format" content="text/html" />
+  {% endif %}
+  {% if page.tags %}
+    {% for tag in page.tags %}<meta property="dc:subject" content="{{ tag }}" />{% endfor %}
   {% endif %}
 
   <!-- Open Graph Metadata -->
   <meta property="og:site_name" content="DR3WH0: Time Travel & Other Anomalies" />
   {% if page.title %}<meta property="og:title" content="{{ page.title }}" />{% endif %}
-  {% if page.description %}<meta property="og:description" content="{{ page.description }}" />{% endif %}
-  {% if page.category == 'radio' %}
+  {% if page.description %}<meta property="og:description" content="{{ page.description }}" />
+  {% elsif page.category == 'radio' %}
     <meta property="og:description" content="Track list with album covers for a last.fm station played by DR3WH0." />
-  {% endif %}
-  {% if page.category == 'photo' %}
+  {% elsif page.category == 'photo' %}
     <meta property="og:description" content="A photograph by DR3WH0." />
+  {% else %}
+    <meta property="og:description" content="A photo/poetry/music blog by DR3WH0." />
   {% endif %}
 </head>
