--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head prefix="dc: http://purl.org/dc/terms/" prefix="og: http://ogp.me/ns#">
+<head>
   <meta http-equiv="Content-Type" content="Type=text/html; charset=utf-8" />
   <meta name="author" content="DR3WH0">
   <meta name="keywords" content="Prose, Poetry, Photography, Music" />
@@ -18,41 +18,45 @@
   {% endif %}
 
   <!-- RDFa Dublin Core Metadata -->
-  <meta property="dc:creator" content="DR3WH0" />
-  <meta property="dc:language" content="en" />
-  {% if page.title %}<meta property="dc:title" content="{{ page.title }}" />{% endif %}
+  <span vocab="http://purl.org/dc/terms/">
+  <meta property="creator" content="DR3WH0" />
+  <meta property="language" content="en" />
+  {% if page.title %}<meta property="title" content="{{ page.title }}" />{% endif %}
   {% if page.category == 'radio' %}
-    <meta property="dc:description" content="Track list with album covers for a last.fm station played by DR3WH0." />
-    <meta property="dc:type" content="Text" />
-    <meta property="dc:type" content="Image" />
-    <meta property="dc:format" content="text/html" />
-    <meta property="dc:format" content="image/jpeg" />
-    <meta property="dc:format" content="image/png" />
-    <meta property="dc:subject" content="music" />
-    <meta property="dc:subject" content="album artwork" />
+    <meta property="description" content="Track list with album covers for a last.fm station played by DR3WH0." />
+    <meta property="type" content="Text" />
+    <meta property="type" content="Image" />
+    <meta property="format" content="text/html" />
+    <meta property="format" content="image/jpeg" />
+    <meta property="format" content="image/png" />
+    <meta property="subject" content="music" />
+    <meta property="subject" content="album artwork" />
   {% elsif page.category == 'photo' %}
-    <meta property="dc:description" content="A photograph by DR3WH0." />
-    <meta property="dc:type" content="Image" />
-    <meta property="dc:format" content="image/jpeg" />
-    <meta property="dc:subject" content="photography" />
+    <meta property="description" content="A photograph by DR3WH0." />
+    <meta property="type" content="Image" />
+    <meta property="format" content="image/jpeg" />
+    <meta property="subject" content="photography" />
   {% else %}
-    {% if page.description %}<meta property="dc:description" content="{{ page.description }}" />{% endif %}
-    <meta property="dc:type" content="Text" />
-    <meta property="dc:format" content="text/html" />
+    {% if page.description %}<meta property="description" content="{{ page.description }}" />{% endif %}
+    <meta property="type" content="Text" />
+    <meta property="format" content="text/html" />
   {% endif %}
   {% if page.tags %}
-    {% for tag in page.tags %}<meta property="dc:subject" content="{{ tag }}" />{% endfor %}
+    {% for tag in page.tags %}<meta property="subject" content="{{ tag }}" />{% endfor %}
   {% endif %}
+  </span>
 
   <!-- Open Graph Metadata -->
-  <meta property="og:site_name" content="DR3WH0: Time Travel & Other Anomalies" />
-  {% if page.title %}<meta property="og:title" content="{{ page.title }}" />{% endif %}
-  {% if page.description %}<meta property="og:description" content="{{ page.description }}" />
+  <span vocab="http://ogp.me/ns#">
+  <meta property="site_name" content="DR3WH0: Time Travel & Other Anomalies" />
+  {% if page.title %}<meta property="title" content="{{ page.title }}" />{% endif %}
+  {% if page.description %}<meta property="description" content="{{ page.description }}" />
   {% elsif page.category == 'radio' %}
-    <meta property="og:description" content="Track list with album covers for a last.fm station played by DR3WH0." />
+    <meta property="description" content="Track list with album covers for a last.fm station played by DR3WH0." />
   {% elsif page.category == 'photo' %}
-    <meta property="og:description" content="A photograph by DR3WH0." />
+    <meta property="description" content="A photograph by DR3WH0." />
   {% else %}
-    <meta property="og:description" content="A photo/poetry/music blog by DR3WH0." />
+    <meta property="description" content="A photo/poetry/music blog by DR3WH0." />
   {% endif %}
+  </span>
 </head>
